--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "slim/slim": "^4.14",
         "slim/psr7": "^1.7",
         "monolog/monolog": "^3.8",
-        "php-di/php-di": "^7.0"
+        "php-di/php-di": "^7.0",
+        "symfony/console": "^7.2"
     },
     "autoload": {
         "psr-4": {
